objects/TracRTC__Criterion__c.object
<CustomObject>
    <description>Represents a single generic criterion. Is part of a Criteria Set.</description>
    <fields>
        <fullName>TracRTC__Criteria_Set__c</fullName>
        <description>A reference to the parent Criteria Set record</description>
        <label>Criteria Set</label>
        <referenceTo>TracRTC__Criteria_Set__c</referenceTo>
        <relationshipLabel>Criteria</relationshipLabel>
        <relationshipName>Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracRTC__Custom_Clause__c</fullName>
        <description>Holds a custom SOQL clause manually specified by the end-user, e.g. Status IN ( &apos;Closed&apos;, &apos;In Progress&apos;, &apos;Canceled&apos; )</description>
        <label>Custom Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the criterion record is custom or not, i.e. has been manually entered by the end-user</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Field_Name__c</fullName>
        <description>The field name of a criterion, e.g. Status, AnnualRevenue, Amount</description>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Field_Value__c</fullName>
        <description>The field value of the criterion, e.g. Closed, 10000, 50</description>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Index__c</fullName>
        <description>The index of the criterion. Automatically generated by the criteriaListLwc component</description>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Operator__c</fullName>
        <description>The operator of the criterion, e.g. &quot;equals&quot;, &quot;notequals&quot;, &quot;greaterthan&quot;</description>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Criterion</label>
    <nameField>
        <label>Assignment Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>